Fix style for deleting event on total page Add calendar page

--- a/mobile/platforms/android/assets/www/index.html
+++ b/mobile/platforms/android/assets/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app" ng-controller="AppCtrl">
+<html ng-app="app" ng-controller="AppCtrl" ng-swipe-right="swipeRight()" ng-swipe-left="swipeLeft()">
 <head>
     <title>Some titles</title>
 
