--- a/src/common/directives/eventListWithDate/eventListWithDate.tpl.html
+++ b/src/common/directives/eventListWithDate/eventListWithDate.tpl.html
@@ -1,4 +1,4 @@
-<div class="date-title">
+<div class="date-title" ng-if="isShow()">
     <span class="date">
         <strong>{{description}}</strong>
         {{day.date | date:'EEE, MMM dd' }}
