--- a/src/common/directives/calendar/calendar.tpl.html
+++ b/src/common/directives/calendar/calendar.tpl.html
@@ -1,9 +1,9 @@
 <div class="calendar clearfix">
     <div class="pull-left">
-        <button ng-click="prev()" class="btn">Prev</button>
+        <button ng-click="prev()" class="btn btn-info">Prev</button>
     </div>
     <div class="pull-right">
-        <button ng-click="next()" class="btn">Next</button>
+        <button ng-click="next()" class="btn btn-info">Next</button>
     </div>
     <div class="title">
         {{date | date : 'MMMM yyyy'}}
