--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="cordova.js"></script>
 </head>
 <body>
+<preloader></preloader>
 <headroom offset="50" class="header--fixed top-header" classes='{"initial":"animated","pinned":"fadeInDown","unpinned":"fadeOutUp","top":"headroom--top","notTop":"headroom--not-top"}'>
     <div class="container">
         <div class="row">
